cif/org.eclipse.escet.cif.tests/tests/controllercheck/mdd/non_determinism.Cx.err
WARNING: The alphabet of the specification contains no uncontrollable events.
ERROR: CIF controller properties checker failed due to unsatisfied preconditions:

  ------------------------------------------------------------------------------------------------------
  (1/1) Non-deterministic edges with overlapping guards within a location, for controllable event "p.a".
  ------------------------------------------------------------------------------------------------------
   * In automaton "p":
     - location:
       ^
